# safespace-ai-agent

./: .env.example  .gitignore  FINAL_IMPLEMENTATION.md  PROJECT_EXPLANATION_FOR_INTERVIEWS.md  REAL_TIME_SEARCH_WORKING.md  THERAPIST_SEARCH_GUIDE.md  app.py  frontend.py  openstreetmap_response.json  pyproject.toml  render.yaml  requirements.txt  test_openstreetmap.py
backend/: __init__.py  ai_agent.py  main.py  main_simple.py  tools.py
