[project]
name = "safespace-ai-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "beautifulsoup4>=4.12.0",
    "fastapi>=0.123.5",
    "groq>=0.37.0",
    "langchain>=1.1.0",
    "langchain-groq>=1.1.0",
    "langgraph>=1.0.4",
    "ollama>=0.6.1",
    "pydantic>=2.12.5",
    "python-dotenv>=1.0.0",
    "requests>=2.32.5",
    "streamlit>=1.51.0",
    "twilio>=9.8.8",
    "uvicorn>=0.38.0",
]
